# asciishade

./: .gitignore  CODE_OF_CONDUCT.md  ISSUES.md  Makefile  NOTES.md  README.md  TODO.md  canvas.c  canvas.h  colors.c  colors.h  helpfile.txt  hud.c  hud.h  mPrint.h  main.c  main.py  meson.build  test.txt  title.md  tools.c  tools.h  unittest_canvas_pixel.c  unittest_chars.c  unittest_colors  unittest_colors.c  unittest_driver.c  unittest_read_ascii.c  unittest_time.c  unittest_wide_chars.c
asciishade/: __main__.py
